@@ -8,6 +8,10 @@ BUG FIXES:
  * FutureParam did not work in Bioconductor (>= 3.8) due to updates in
    the BiocParallel package.
 
+DEPRECATED AND DEFUNCT:
+
+ * Argument 'catch.errors' for FutureParam is now defunct and hidden.
+ 
 
 Version: 0.1.1 [2017-07-09]
 
